--- a/package.json
+++ b/package.json
@@ -5,12 +5,27 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"node server.js"
+    "build": "webpack",
+    "start": "node server.js",
+    "package": "webpack -p"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "babel-cli": "^6.4.0",
+    "babel-core": "^6.4.0",
     "babel-loader": "^6.2.1",
-    "jsx-loader": "^0.13.2"
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
+    "history": "^1.17.0",
+    "jsx-loader": "^0.13.2",
+    "react": "^0.14.6",
+    "react-cookie": "^0.4.3",
+    "react-dom": "^0.14.6",
+    "react-router": "^1.0.3",
+    "react-tap-event-plugin": "^0.2.1",
+    "redux": "^3.0.5",
+    "redux-devtools": "^3.0.1",
+    "webpack": "^1.12.11"
   }
 }
