--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "redux": "^3.0.5",
     "redux-devtools": "^3.0.1",
     "webpack": "^1.12.11"
+  },
+  "dependencies": {
+    "material-ui": "^0.14.2"
   }
 }
