--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "react": "^0.14.6",
     "react-cookie": "^0.4.3",
     "react-dom": "^0.14.6",
+    "react-hot-loader": "^1.3.0",
     "react-router": "^1.0.3",
     "react-tap-event-plugin": "^0.2.1",
     "redux": "^3.0.5",
     "redux-devtools": "^3.0.1",
-    "webpack": "^1.12.11"
+    "webpack": "^1.12.11",
+    "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
     "material-ui": "^0.14.2"
