--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack -d",
+    "build": "webpack",
     "start": "node server.js",
     "package": "webpack -p"
   },
@@ -32,6 +32,9 @@
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
+    "babel-plugin-add-module-exports": "^0.1.2",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-dev-warning": "^0.1.0",
     "material-ui": "^0.14.2"
   }
 }
