--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "babel": "^6.5.2",
     "babel-cli": "^6.4.0",
     "babel-core": "^6.4.0",
     "babel-loader": "^6.2.1",
@@ -23,6 +24,7 @@
     "react": "^0.14.6",
     "react-cookie": "^0.4.3",
     "react-dom": "^0.14.6",
+    "react-hot": "^0.1.0",
     "react-hot-loader": "^1.3.0",
     "react-router": "^1.0.3",
     "react-tap-event-plugin": "^0.2.1",
